# longest-word

./: pyproject.toml
.github/workflows/: .python-ci.yml
src/longest_word/: game.py
tests/: test_game.py
